Fixed a CSS bug on iOS relating to modal margin collapse.

--- a/assets/scss/components/flex-modals.scss
+++ b/assets/scss/components/flex-modals.scss
@@ -8,6 +8,8 @@
 
     max-height: 95% !important;
     min-height: 95% !important;
+
+    overflow: auto;
   }
 }
 
